--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "WP Band Aid",
   "description": "This extension is for internal use at SitePoint. It makes using the WP back end a bit easier.",
-  "version": "0.13.8",
+  "version": "0.13.9",
 
   "background": {
     "scripts": [
@@ -56,6 +56,15 @@
         "scripts/wordpress/newPostPage.js"
       ],
       "css": [ "css/jquery.datetimepicker.css" ],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": [ "https://sitepointdotcom.createsend.com/campaigns/content/edit/*" ],
+      "js": [
+        "lib/jquery-2.1.1.min.js",
+        "lib/showdown.min.js",
+        "scripts/campaign-monitor/edit.js"
+      ],
       "run_at": "document_idle"
     }
   ],
