--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "WP Band Aid",
   "description": "This extension is for internal use at SitePoint. It makes using the WP back end a bit easier.",
-  "version": "0.13.9",
+  "version": "0.13.10",
 
   "background": {
     "scripts": [
@@ -13,12 +13,20 @@
     ]
   },
 
-  "page_action": {
-    "default_icon": {
-      "19": "icons/19.png",
-      "38": "icons/38.png"
-    },
-    "default_title": "WP Band Aid"
+  // "page_action": {
+  //   "default_icon": {
+  //     "19": "icons/19.png",
+  //     "38": "icons/38.png"
+  //   },
+  //   "default_title": "WP Band Aid"
+  // },
+
+  "browser_action": {
+  "default_icon": {
+    "19": "icons/19.png",
+    "38": "icons/38.png"
+  },
+   "default_popup": "fragments/popup.html"
   },
 
   "permissions": [
