--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "WP Band Aid",
   "description": "This extension is for internal use at SitePoint. It makes using the WP back end a bit easier.",
-  "version": "0.13.12",
+  "version": "0.13.13",
 
   "background": {
     "scripts": [
@@ -22,7 +22,10 @@
   },
 
   "permissions": [
-    "contextMenus", "activeTab", "tabs"
+    "contextMenus",
+    "activeTab",
+    "tabs",
+    "https://api.parsely.com/"
   ],
 
   "content_scripts": [
@@ -46,7 +49,8 @@
         "*://*.sitepoint.com/woorank/",
         "*://*.sitepoint.com/programming/"
       ],
-      "js": [ "scripts/main-site/channels.js" ],
+      "js": [ "scripts/utils/utilities.js", "scripts/main-site/channels.js", "lib/moment.min.js" ],
+      "css": [ "css/styles.css" ],
       "run_at": "document_idle"
     },
     {
