--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "WP Band Aid",
   "description": "This extension is for internal use at SitePoint. It makes using the WP back end a bit easier.",
-  "version": "0.13.16",
+  "version": "0.13.17",
 
   "background": {
     "scripts": [
@@ -54,6 +54,7 @@
         "lib/jquery.datetimepicker.js",
         "lib/showdown.min.js",
         "lib/handlebars-4.0.5.min.js",
+        "lib/beautify-html.min.js",
         "scripts/utils/capitalize.js",
         "scripts/utils/modal.js",
         "scripts/wordpress/modules/editorToolbar.js",
