--- a/manifest.json
+++ b/manifest.json
@@ -54,6 +54,9 @@
         "lib/jquery.datetimepicker.js",
         "lib/showdown.min.js",
         "lib/handlebars-4.0.5.min.js",
+        "lib/beautify.min.js",
+        "lib/beautify-css.min.js",
+        "lib/beautify-html.min.js",
         "scripts/utils/capitalize.js",
         "scripts/utils/modal.js",
         "scripts/wordpress/modules/editorToolbar.js",
