--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@ nb-configuration.xml
 
 # Mac OSX
 .DS_Store
+
 # Thumbnails
 ._*
+
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
@@ -34,3 +36,7 @@ nb-configuration.xml
 
 #JSHint
 .jshintrc
+
+#Node
+package.json
+node_modules/
