--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,13 @@ nb-configuration.xml
 .vagrant
 .vagrant/*
 
-#JSHint
+# JSHint
 .jshintrc
 
-#Node
+# Node
 package.json
 node_modules/
+
+# Tests
+tests/integration/creds.js
+tests/integration/reports/
